// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Datepicker :props should render as disabled 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <!---->
   
  <input
    autocomplete="off"
    class="ec-input-field__input ec-input-field__input--has-icon flatpickr-input"
    data-test="ec-datepicker ec-input-field__input"
    disabled="disabled"
    id="datepicker-1"
    type="text"
  />
   
  <div
    class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--is-disabled"
    data-test="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-input-field__icon ec-icon"
      data-test="ec-input-field__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-calendar"
      />
    </svg>
  </div>
   
  <!---->
</div>
`;

exports[`Datepicker :props should render with a bottom note 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <!---->
   
  <input
    autocomplete="off"
    class="ec-input-field__input ec-input-field__input--has-icon flatpickr-input"
    data-test="ec-datepicker ec-input-field__input"
    id="datepicker-1"
    type="text"
  />
   
  <div
    class="ec-input-field__icon-wrapper"
    data-test="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-input-field__icon ec-icon"
      data-test="ec-input-field__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-calendar"
      />
    </svg>
  </div>
   
  <div
    class="ec-input-field__bottom-note"
    data-test="ec-input-field__bottom-note"
  >
    Datepicker bottom note
  </div>
</div>
`;

exports[`Datepicker :props should render with a bottom note in a warning state 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <!---->
   
  <input
    autocomplete="off"
    class="ec-input-field__input ec-input-field__input--has-icon flatpickr-input"
    data-test="ec-datepicker ec-input-field__input"
    id="datepicker-1"
    type="text"
  />
   
  <div
    class="ec-input-field__icon-wrapper"
    data-test="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-input-field__icon ec-icon"
      data-test="ec-input-field__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-calendar"
      />
    </svg>
  </div>
   
  <div
    class="ec-input-field__bottom-note ec-input-field__bottom-note--is-warning"
    data-test="ec-input-field__bottom-note"
  >
    Datepicker bottom note
  </div>
</div>
`;

exports[`Datepicker :props should render with a label 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="datepicker-1"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      Datepicker label
      <!---->
    </span>
     
    <!---->
  </label>
   
  <input
    autocomplete="off"
    class="ec-input-field__input ec-input-field__input--has-icon flatpickr-input"
    data-test="ec-datepicker ec-input-field__input"
    id="datepicker-1"
    type="text"
  />
   
  <div
    class="ec-input-field__icon-wrapper"
    data-test="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-input-field__icon ec-icon"
      data-test="ec-input-field__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-calendar"
      />
    </svg>
  </div>
   
  <!---->
</div>
`;

exports[`Datepicker :props should render with a note 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="datepicker-1"
  >
    <!---->
     
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      Datepicker note
    </span>
  </label>
   
  <input
    autocomplete="off"
    class="ec-input-field__input ec-input-field__input--has-icon flatpickr-input"
    data-test="ec-datepicker ec-input-field__input"
    id="datepicker-1"
    type="text"
  />
   
  <div
    class="ec-input-field__icon-wrapper"
    data-test="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-input-field__icon ec-icon"
      data-test="ec-input-field__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-calendar"
      />
    </svg>
  </div>
   
  <!---->
</div>
`;

exports[`Datepicker :props should render with a placeholder 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <!---->
   
  <input
    autocomplete="off"
    class="ec-input-field__input ec-input-field__input--has-icon flatpickr-input"
    data-test="ec-datepicker ec-input-field__input"
    id="datepicker-1"
    placeholder="Datepicker placeholder"
    type="text"
  />
   
  <div
    class="ec-input-field__icon-wrapper"
    data-test="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-input-field__icon ec-icon"
      data-test="ec-input-field__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-calendar"
      />
    </svg>
  </div>
   
  <!---->
</div>
`;

exports[`Datepicker :props should render with an error message 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <!---->
   
  <input
    aria-describedby="ec-input-field-error-2"
    autocomplete="off"
    class="ec-input-field__input ec-input-field__input--has-error ec-input-field__input--has-icon flatpickr-input"
    data-test="ec-datepicker ec-input-field__input"
    id="datepicker-1"
    type="text"
  />
   
  <div
    class="ec-input-field__icon-wrapper"
    data-test="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-input-field__icon ec-icon"
      data-test="ec-input-field__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-calendar"
      />
    </svg>
  </div>
   
  <div
    class="ec-input-field__error-text"
    data-test="ec-input-field__error-text"
    id="ec-input-field-error-2"
  >
    A random error message
  </div>
</div>
`;

exports[`Datepicker should render properly 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <!---->
   
  <input
    autocomplete="off"
    class="ec-input-field__input ec-input-field__input--has-icon flatpickr-input"
    data-test="ec-datepicker ec-input-field__input"
    id="datepicker-1"
    type="text"
  />
   
  <div
    class="ec-input-field__icon-wrapper"
    data-test="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-input-field__icon ec-icon"
      data-test="ec-input-field__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-calendar"
      />
    </svg>
  </div>
   
  <!---->
</div>
`;
